--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,26 @@
 body {
-  background-color: #5f7470;
+  background-image: linear-gradient(#9ea3b05d, #9ea3b05d),
+    url(../img/station.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.container > .row {
+  height: 100vh;
 }
 
 h4 {
   text-transform: uppercase;
+  padding-top: 1.1rem;
 }
 
+#title {
+  background-color: #546a7b;
+}
 #ticket {
-  background-color: #889696;
+  background-color: #0d1f2d;
+}
+#final-price {
+  background-color: #9ea3b0;
 }
